[tool.poetry]
name = "metaboutique"
version = "0.1.0"
description = "A link aggregator built from a twitter thread"
authors = ["Joachim Jablon <ewjoachim@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.0"
Jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
black = "^20.8b1"
isort = "^5.6.4"
mypy = "^0.790"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
